Assignment 1/wandb/run-20230302_222753-t6rftvg2/files/output.log
lr_0.1_acti_identity_function_w_inxavier_initialization_opt_nadam_epoch_40_num_hid_4_loss_mean_squared_error_function_batchsize_16_neur_128_lam_0.5_momentum_0.5_beta_0.9_beta1_0.9_beta2_0.999
neuron configuration: [784, 128, 128, 128, 128, 10]
[34m[1mwandb[39m[22m: [32m[41mERROR[39m[49m Error while calling W&B API: could not find agent gak3g906 during agentHeartbeat (<Response [404]>)
Exception in thread Thread-10:
Traceback (most recent call last):
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\sdk\lib\retry.py", line 131, in __call__
    result = self._call_fn(*args, **kwargs)
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\sdk\internal\internal_api.py", line 242, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\vendor\gql-0.2.0\wandb_gql\client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\vendor\gql-0.2.0\wandb_gql\client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\vendor\gql-0.2.0\wandb_gql\transport\requests.py", line 39, in execute
    request.raise_for_status()
  File "C:\Users\anant\anaconda3\lib\site-packages\requests\models.py", line 1021, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\sdk\internal\internal_api.py", line 2126, in agent_heartbeat
    response = self.gql(
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\sdk\internal\internal_api.py", line 214, in gql
    ret = self._retry_gql(
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\sdk\lib\retry.py", line 147, in __call__
    retry_timedelta_triggered = check_retry_fn(e)
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\util.py", line 1011, in no_retry_auth
    raise CommError(f"Permission denied to access {wandb.run.path}")
wandb.errors.CommError: Permission denied to access ananthu2014/CS6910_ASSIGNMENT_1/t6rftvg2
During handling of the above exception, another exception occurred:
Traceback (most recent call last):
  File "C:\Users\anant\anaconda3\lib\threading.py", line 980, in _bootstrap_inner
    self.run()
  File "C:\Users\anant\anaconda3\lib\threading.py", line 917, in run
    self._target(*self._args, **self._kwargs)
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\agents\pyagent.py", line 166, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\apis\internal.py", line 126, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
  File "C:\Users\anant\anaconda3\lib\site-packages\wandb\sdk\internal\internal_api.py", line 2137, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
  File "C:\Users\anant\anaconda3\lib\ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "C:\Users\anant\anaconda3\lib\ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    Permission denied to access ananthu2014/CS6910_ASSIGNMENT_1/t6rftvg2
               ^
SyntaxError: invalid syntax
 epoch:  39  Train error:       nan  Train accuracy:    10.01 Val error:      nan Val accuracy:     9.95